# mx3-beamline-library

./: .coveragerc  .drone.docker.yml  .drone.yml  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  blurry_image.py  grid_motor_positions.py  pyproject.toml  pytest.ini  test_camera_bl.py  test_lucid.py
as_beamline_library/: constants.py  credentials.py  paths.py
as_beamline_library/devices/: __init__.py  detectors.py  motors.py  optics.py
as_beamline_library/devices/classes/: __init__.py  detectors.py  motors.py  test_devices.py
as_beamline_library/devices/sim/: __init__.py  detectors.py  motors.py  optics.py
as_beamline_library/devices/sim/classes/: __init__.py  detectors.py  motors.py
as_beamline_library/plans/: __init__.py  basic_scans.py
as_beamline_library/plans/stubs/: __init__.py
docs/source/: conf.py  index.rst
docs/source/reference/: constants.rst  credentials.rst  devices.rst  paths.rst  plans.rst  science.rst  setup.rst
examples/: calibrate_top_camera.py  crystal_finder_example.py  find_tip_of_loop.py  get_drop_images.py  md3_grid_scans.py  md3_motors.py  mxcube_raster_scan.py  one_shot.py  optical_centering.py  robot.py  screening.py  tray_calibration.py  tray_grid_scans.py  x_ray_centering.py
examples/prefect_flows/: mxcube_grid_scan.py  mxcube_sample_centering.py  single_loop_data_collection_flow.py  tray_screening_flow.py
mx3_beamline_library/: __init__.py  config.py  constants.py  credentials.py  logger.py  paths.py
mx3_beamline_library/devices/: __init__.py  beam.py  component.py  cryo.py  detectors.py  motors.py  optics.py  pds_control.py  shutters.py
mx3_beamline_library/devices/classes/: Stripe1_para_vrs_pitch_LUT1.csv  __init__.py  beam.py  component.py  detectors.py  energy_config.yml  md3_config.yml  motors.py  robot.py  shutters.py  vacuum.py
mx3_beamline_library/devices/classes/md3/: ClientFactory.py  ExportClient.py  ExporterClient.py  GenericClient.py  Logger.py  __init__.py  exporter_client.py  logger.py
mx3_beamline_library/devices/classes/md3/Command/: Epics.py  Exporter.py  Pool.py  Sardana.py  Spec.py  Taco.py  Tango.py  Tine.py  __init__.py
mx3_beamline_library/devices/classes/md3/Command/embl/: ExporterClient.py  MDClient.py  MDEvents.py  StandardClient.py  __init__.py
mx3_beamline_library/devices/classes/signals/: redis_signal.py
mx3_beamline_library/devices/sim/: __init__.py  beam.py  cryo.py  detectors.py  motors.py  optics.py  shutters.py
mx3_beamline_library/devices/sim/classes/: __init__.py  beam.py  detectors.py  motors.py  shutters.py  signals.py
mx3_beamline_library/devices/sim/classes/mock/: dectris.py
mx3_beamline_library/devices/sim/sim_images/: md3_image.npy  top_camera.npy
mx3_beamline_library/examples/: get_drop_images.py  md3_grid_scans.py  md3_motors.py  optical_and_x_ray_centering.py  optical_centering.py  prefect_workflow.py  robot.py  single_loop_data_collection_flow.py  tray_grid_scans.py  tray_scans.py  tray_screening_workflow.py  x_ray_centering.py
mx3_beamline_library/plans/: __init__.py  basic_scans.py  beam_utils.py  crystal_pics.py  exceptions.py  image_analysis.py  manual_xray_centering.py  optical_and_xray_centering.py  optical_centering.py  pds_control.py  plan_stubs.py  psi_optical_centering.py  robot.py  tray_scans.py  xray_centering.py
mx3_beamline_library/plans/calibration/: top_camera.py  top_camera_pixels_per_mm.py  top_camera_target_coords.py
mx3_beamline_library/plans/calibration/trays/: calibrate.py  image_analysis.py  plane_frame.py
mx3_beamline_library/plans/calibration/trays/plate_configs/: plate_configs.py
mx3_beamline_library/plans/commissioning/: commissioning.py  stats.py  utils.py
mx3_beamline_library/plans/commissioning/examples/: scan_1d.py  scan_1d_derivative.py  scan_2d.py
mx3_beamline_library/plans/configuration/: optical_and_xray_centering.yml  optical_centering.yml  top_camera_background_image.npy
mx3_beamline_library/plans/energy_changer/: dmm_energy.py  ivu_energy.py  master_energy.py  master_energy_ioc.py
mx3_beamline_library/plans/energy_changer/async_energy_changer/: dmm_energy.py  ivu_energy.py  master_energy.py  master_energy_ioc.py  set_master_energy.py
mx3_beamline_library/plans/energy_changer_config/: energy_config.yml
mx3_beamline_library/plans/pds_control/: __init__.py  beam_aligner.py  beam_steering.py  energy_changer.py  steering_control.py
mx3_beamline_library/plans/pds_control/energy_changer_config/: Stripe1_para_vrs_pitch_LUT1.csv  energy_config.yml
mx3_beamline_library/plans/stubs/: devices.py
mx3_beamline_library/schemas/: crystal_finder.py  detector.py  loop_edge_detection.py  optical_and_xray_centering.py  optical_centering.py  xray_centering.py
mx3_beamline_library/science/: energy_conversion.py  holton2009.py  resolution.py
mx3_beamline_library/science/optical_and_loop_centering/: center_of_mass.py  crystal_finder.py  loop_edge_detection.py  optical_centering.py  psi_optical_centering.py
mx_beamline_library/devices/: __init__.py
mx_beamline_library/devices/sim/classes/: detectors.py
mx_beamline_library/plans/: __init__.py  basic_scans.py
tests/: basic_scans_test.py  cameras_test.py  conftest.py  detectors_test.py  misc_test.py  motors_test.py  optical_centering_test.py  stubs_test.py  test_basic_scans.py  test_beam.py  test_beam_center.py  test_commissioning_scans.py  test_commissioning_stats.py  test_cryo.py  test_crystal_pics.py  test_dose_rate_and_energy_conversion.py  test_manual_xray_centering.py  test_optical_centering.py  test_plan_stubs.py  test_resolution.py  test_shutters.py  test_tray_scans.py  test_xray_centering.py  xray_centering_test.py
tests/test_data/: optical_centering_results.pkl  tray_grid_coordinates.pkl
