[tool.poetry]
name = "mx3-beamline-library"
version = "0.2.2"
description = "Ophyd devices and bluesky plans."
authors = ["Stephen Mudie <stephenm@ansto.gov.au>"]

[[tool.poetry.source]]
name = "cachedpypi"
url = "https://pypi.asci.synchrotron.org.au/root/pypi/+simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "asci-dev"
url = "https://pypi.asci.synchrotron.org.au/asci/dev/+simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "asciprod"
url = "https://pypi.asci.synchrotron.org.au/asci/prod/+simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "mx3dev"
url = "https://pypi.asci.synchrotron.org.au/mx3/dev/+simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPi"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ophyd = "1.8.0"
bluesky = "1.10.0"
as-redis-signal = {git = "https://bitbucket.synchrotron.org.au/scm/ec/as-redis-signal.git", rev = "main"}
requests = "^2.31.0"
pydantic = "^1.10.2"
pyepics = "3.5.1"
httpx = "^0.24.1"
numpy = "^1.23.5"
coloredlogs = "^15.0.1"
Pillow = "^9.0.1"
scipy = "^1.8.0"
Sphinx = "4.5.0"
sphinx-rtd-theme = "0.5.2"
mx-robot-library = "0.1.3"
redis = "^5.0.1"
h5py="3.9.0"
hdf5plugin="4.1.3"
bitshuffle="0.5.1"
matplotlib="^3.7.1"
PyYAML="^6.0"
opencv-python="^4.7.0"
pandas="2.0.2"
tiled = "0.1.0a105"
plotly = "^5.16.1"
httpx-file = "^0.2.0"
prefect = "2.14.4"


[tool.poetry.extras]
as-redis-signal = ["as-redis-signal"]
mx-robot-library = ["mx-robot-library"]


[tool.poetry.dev-dependencies]
black = "22.3.0"
pre-commit = "2.18.1"
pytest = "7.1.1"
alabaster = "0.7.12"
pylint = "2.13.4"
flake8 = "4.0.1"
isort = "5.10.1"
pytest-html = "3.1.1"
pytest-cov = "3.0.0"
bluesky-httpserver = "0.0.9"
bluesky-queueserver-api = "0.0.9"
bluesky-queueserver = {git = "https://github.com/clintonroy/bluesky-queueserver.git", rev = "main"}
fastapi = "^0.96.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
