[tool.poetry]
name = "mx3-beamline-library"
version = "1.1.15"
description = "Ophyd devices and bluesky plans."
authors = ["Stephen Mudie <stephenm@ansto.gov.au>"]

[[tool.poetry.source]]
name = "cachedpypi"
url = "https://pypi.asci.synchrotron.org.au/root/pypi/+simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "asci-dev"
url = "https://pypi.asci.synchrotron.org.au/asci/dev/+simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "asciprod"
url = "https://pypi.asci.synchrotron.org.au/asci/prod/+simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "mx3dev"
url = "https://pypi.asci.synchrotron.org.au/mx3/dev/+simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPi"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ophyd = "1.9.0"
bluesky = "1.12.0"
as-redis-signal = {git = "https://bitbucket.synchrotron.org.au/scm/ec/as-redis-signal.git", rev = "main"}
requests = "^2.31.0"
pydantic = "^2.7.0"
pyepics = "3.5.1"
httpx = "^0.27.0"
numpy = "^1.23.5"
coloredlogs = "^15.0.1"
Pillow = "^10.4.0"
scipy = "^1.8.0"
mx-robot-library = { git = "https://github.com/AustralianSynchrotron/mx-robot-library.git", tag = "0.2.2" }
redis = "^5.0.1"
h5py="^3.8.0"
hdf5plugin="^4.1.1"
bitshuffle="0.5.1"
matplotlib="^3.7.1"
PyYAML="^6.0"
opencv-python="^4.7.0"
pandas="^2.0.2"
tiled = "0.1.0a105"
httpx-file = "^0.2.0"
as-acquisition-library = { git = "https://bitbucket.synchrotron.org.au/scm/ec/as-acquisition-library.git", rev = "main" }



[tool.poetry.extras]
as-redis-signal = ["as-redis-signal"]
as-acquisition-library = ["as-acquisition-library"]


[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
pytest = "^7.1.1"
alabaster = "0.7.12"
pytest-html = "3.1.1"
pytest-cov = "3.0.0"
prefect = "2.14.4"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "0.5.2"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
